--- a/Avaliação/style.css
+++ b/Avaliação/style.css
@@ -1,1 +1,66 @@
+* {
+    font-family: "Overpass", sans-serif;
+}
 
+:root {
+    --primary-orange: #f47c26;
+    --neutral-white: #ffffff;
+    --neutral-light-grey: #c2c5d0;
+    --neutral-dark-blue: #2b3747;
+    --neutral-very-dark-blue: #181f2a;
+}
+
+.container {
+    border-radius: 10px;
+    margin-left: 30%;
+    margin-right: 30%;
+    margin-top: 50px;
+    background-color: var(--neutral-dark-blue);
+}
+
+img {
+    background-color: var(--neutral-very-dark-blue);
+    padding: 5px;
+    border-radius: 100%;
+    margin-top: 7%;
+    margin-left: 7%;
+}
+
+h2 {
+    margin-top: 5%;
+    margin-left: 7%;
+    color: var(--neutral-white);
+}
+
+p {
+    color: var(--neutral-white);
+    padding-left: 7%;
+    padding-right: 20%;
+}
+
+.notamento {
+    display: block;
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.nota {
+    text-decoration: none;
+    padding: 20px;
+    margin: 0px 10px;
+    border-radius: 100%;
+    background-color: var(--neutral-very-dark-blue);
+    color: var(--neutral-light-grey);
+}
+
+.avaliar {
+    text-decoration: none;
+    color: var(--neutral-light-grey);
+    background-color: #f47c26;
+    display: block;
+    text-align: center;
+    margin: 20px 30px 10px 30px;
+    padding: 10px 0px 10px 0px;
+    border-radius: 10%;
+}
